# nix-cmake-py-test

./: CMakeLists.txt  flake.nix  shell.nix
.github/workflows/: run.yml
